# pyciv7

./: .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: gen_ref_pages.py
scripts/: get_incomplete_tables.py  log_incomplete_api.py
src/pyciv7/: __init__.py  errors.py  hooks.py  modinfo.py  modinfo_extensions.py  runner.py  settings.py
src/pyciv7/resources/: transcrypt_hook.js
test/: conftest.py  test_modinfo.py  test_runner.py
