[project]
name = "pyciv7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dylan Manuel", email = "dylan.manuel@att.net" }
]
requires-python = ">3.7,<3.14"
dependencies = [
    "pydantic-settings>=2.0.3",
    "rich>=13.8.1",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
